[gd_scene load_steps=8 format=3 uid="uid://85sps8wheqks"]

[ext_resource type="Script" uid="uid://tmupk02mo5cf" path="res://Scripts/options.gd" id="1_hvj8k"]
[ext_resource type="Texture2D" uid="uid://c6a720i8l5y34" path="res://Sprites/Menu/Buttons normal/Start_button_normal.png" id="4_qcivb"]
[ext_resource type="Texture2D" uid="uid://vw31cl4a5at6" path="res://Sprites/Menu/Button highlighted/start_button_highlighted.png" id="5_aag3x"]
[ext_resource type="Texture2D" uid="uid://bbqpoiw2d8kgm" path="res://Sprites/Menu/Buttons normal/options_button_normal.png" id="6_033dp"]
[ext_resource type="Texture2D" uid="uid://brsxhcftfj84k" path="res://Sprites/Menu/Button highlighted/options_button_highlighted.png" id="7_fpdr8"]
[ext_resource type="Texture2D" uid="uid://d4ftrh774lsja" path="res://Sprites/Menu/Buttons normal/quit_button_normal.png" id="8_r103k"]
[ext_resource type="Texture2D" uid="uid://dct6cfiivk3rp" path="res://Sprites/Menu/Button highlighted/quit_button_highlighted.png" id="9_sut4s"]

[node name="Options" type="Node2D"]
script = ExtResource("1_hvj8k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 144.0
color = Color(0, 0.25098, 0.333333, 1)

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lautstaerke" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 27.0
offset_top = 13.0
offset_right = 117.0
offset_bottom = 45.0
texture_normal = ExtResource("4_qcivb")
texture_hover = ExtResource("5_aag3x")

[node name="Fullscreen" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 27.0
offset_top = 55.0
offset_right = 155.0
offset_bottom = 87.0
texture_normal = ExtResource("6_033dp")
texture_hover = ExtResource("7_fpdr8")

[node name="Zurueck" type="TextureButton" parent="Button_manager"]
texture_filter = 1
layout_mode = 0
offset_left = 163.0
offset_top = 105.0
offset_right = 253.0
offset_bottom = 137.0
texture_normal = ExtResource("8_r103k")
texture_hover = ExtResource("9_sut4s")

[connection signal="pressed" from="Button_manager/Lautstaerke" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_manager/Fullscreen" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Button_manager/Zurueck" to="." method="_on_beenden_pressed"]
